# experimental-cmake3.16.2-xcode11patch

./: .gitignore  CHANGELOG.md  README-jp.md  README.md  cmGlobalXCodeGenerator.xcode11.patch
example-project/: README.md  adhoc.plist  test-1.sh  test-2.sh  test-3.sh  test-4.sh  test-inc.sh
example-project/project/sub1/inc/: sub1.h
example-project/test-1/: CMakeLists.txt
example-project/test-1/src/: main.cpp
example-project/test-2/: CMakeLists.txt
example-project/test-2/src/: main.cpp
example-project/test-2/sub1/: CMakeLists.txt
example-project/test-2/sub1/src/: func.cpp
example-project/test-2/sub2/: CMakeLists.txt
example-project/test-2/sub2/inc/: sub2.h
example-project/test-2/sub2/src/: func.cpp
example-project/test-3/: CMakeLists.txt
example-project/test-3/src/: main.cpp
example-project/test-4/: CMakeLists.txt
example-project/test-4/src/: main.cpp
example-project/test-4/sub1/: CMakeLists.txt
example-project/test-4/sub1/inc/: sub1.h
example-project/test-4/sub1/src/: func.cpp
example-project/test-4/sub2/: CMakeLists.txt
example-project/test-4/sub2/inc/: sub2.h
example-project/test-4/sub2/src/: func.cpp
